# C1_llm_email_replier

./: .gitignore  CHANGELOG.md  README.md  asyncapi.yaml  buildDockerImages.sh  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  startDevelopmentEnvironment.sh  stopDevelopmentEnvironment.sh
C1_llm_email_replier/: __init__.py  __main__.py  change_parameters_handler.py  email_replier_generator.py  message_service.py  mov.py  received_email_handler.py
docker/dev/: Dockerfile  docker-compose.yml  initialize-movDB.js
docker/main/: Dockerfile
src/c1_llm_email_replier/: __init__.py  __main__.py  change_parameters_handler.py  change_parameters_payload.py  email_replier_generator.py  message_service.py  mov.py  received_e_mail_address_payload.py  received_e_mail_handler.py  received_e_mail_payload.py  received_email_handler.py  reply_e_mail_address_payload.py  reply_e_mail_payload.py
tests/: __init__.py  change_parameters.json  json_resources.py  mov_api.py  received_e_mail_address_payload.json  received_e_mail_payload.json  reply_e_mail_address_payload.json  reply_e_mail_payload.json  test_change_parameters_handler.py  test_change_parameters_payload.py  test_email_replier_generator.py  test_email_replier_generator_integration.py  test_message_service.py  test_mov.py  test_received_e_mail_address_payload.py  test_received_e_mail_handler.py  test_received_e_mail_payload.py  test_received_email_handler.py  test_reply_e_mail_address_payload.py  test_reply_e_mail_payload.py
